--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@astrojs/vue": "^5.0.6",
+    "@nanostores/vue": "^0.11.0",
+    "@tailwindcss/vite": "^4.0.4",
+    "astro": "^5.2.5",
+    "firebase": "^11.3.0",
+    "nanostores": "^0.11.3",
+    "swiper": "^11.2.2",
+    "tailwindcss": "^4.0.4",
+    "vue": "^3.5.13",
+    "vuefire": "^3.2.1"
+  },
+  "devDependencies": {
+    "@vite-pwa/astro": "^0.5.0",
+    "daisyui": "5.0.0-beta.7",
+    "workbox-window": "^7.3.0"
   }
 }
