--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^5.2.5",
     "firebase": "^11.3.0",
     "nanostores": "^0.11.3",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.4",
     "vue": "^3.5.13",
     "vuefire": "^3.2.1"
