ref: update maskable icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,18 @@
   "scope": "/reminder/",
   "icons": [
     {
+      "src": "192-mask.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "512-mask.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
       "src": "192.png",
       "sizes": "192x192",
       "type": "image/png"
