--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,24 +2,12 @@
   "name": "Reminder",
   "short_name": "Reminder",
   "description": "En Reminder guarda todas esas pequeñas pero importantes cosas que necesitas recordar para mañana, accesible desde cualquiera de tus dispositivos.",
-  "theme_color": "#282a36",
-  "background_color": "#282a36",
+  "theme_color": "#ff79c6",
+  "background_color": "#ff79c6",
   "display": "standalone",
   "start_url": "/reminder/?source=pwa",
   "scope": "/reminder/",
   "icons": [
-    {
-      "src": "192-mask.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "512-mask.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
     {
       "src": "192.png",
       "sizes": "192x192",
@@ -29,6 +17,31 @@
       "src": "512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "512-mask.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon-small.webp",
+      "sizes": "48x48",
+      "type": "image/webp"
+    },
+    {
+      "src": "icon-medium.ico",
+      "sizes": "72x72 96x96 128x128 256x256"
+    },
+    {
+      "src": "icon-high.svg",
+      "sizes": "257x257"
     }
   ],
   "screenshots": [
