--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,6 +31,11 @@
       "purpose": "maskable"
     },
     {
+      "src": "icon-small.webp",
+      "sizes": "48x48",
+      "type": "image/webp"
+    },
+    {
       "src": "icon-medium.ico",
       "sizes": "72x72 96x96 128x128 256x256"
     },
